--- a/kde-base/klipper/ChangeLog
+++ b/kde-base/klipper/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/klipper
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/klipper/ChangeLog,v 1.92 2008/05/18 18:08:01 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/klipper/ChangeLog,v 1.93 2008/06/05 21:56:56 keytoaster Exp $
+
+*klipper-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +klipper-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of klipper.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> klipper-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
