--- a/kde-base/ktimezoned/ChangeLog
+++ b/kde-base/ktimezoned/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/ktimezoned
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/ktimezoned/ChangeLog,v 1.7 2008/05/16 00:30:54 ingmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/ktimezoned/ChangeLog,v 1.8 2008/06/05 22:26:03 keytoaster Exp $
+
+*ktimezoned-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +ktimezoned-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of ktimezoned.
 
 *ktimezoned-4.0.4 (15 May 2008)
 
