--- a/kde-base/kurifilter-plugins/ChangeLog
+++ b/kde-base/kurifilter-plugins/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kurifilter-plugins
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kurifilter-plugins/ChangeLog,v 1.7 2008/05/16 00:38:04 ingmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kurifilter-plugins/ChangeLog,v 1.8 2008/06/05 22:31:30 keytoaster Exp $
+
+*kurifilter-plugins-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kurifilter-plugins-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kurifilter-plugins.
 
 *kurifilter-plugins-4.0.4 (15 May 2008)
 
