--- a/kde-base/plasma/ChangeLog
+++ b/kde-base/plasma/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/plasma
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/plasma/Attic/ChangeLog,v 1.10 2008/05/30 09:18:51 zlin Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/plasma/Attic/ChangeLog,v 1.11 2008/06/05 22:44:39 keytoaster Exp $
+
+*plasma-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> +plasma-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of plasma.
 
   30 May 2008; Bo Ørsted Andresen <zlin@gentoo.org> plasma-4.0.4.ebuild:
   KDE4_BUILT_WITH_USE_CHECK is now always an array. Bug #216863.
