--- a/kde-base/svgpart/ChangeLog
+++ b/kde-base/svgpart/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/svgpart
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/svgpart/ChangeLog,v 1.7 2008/05/16 00:58:46 ingmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/svgpart/ChangeLog,v 1.8 2008/06/05 22:47:36 keytoaster Exp $
+
+*svgpart-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +svgpart-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of svgpart.
 
 *svgpart-4.0.4 (15 May 2008)
 
