--- a/kde-base/systemsettings/ChangeLog
+++ b/kde-base/systemsettings/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/systemsettings
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/systemsettings/ChangeLog,v 1.9 2008/05/16 00:59:47 ingmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/systemsettings/ChangeLog,v 1.10 2008/06/05 22:48:31 keytoaster Exp $
+
+*systemsettings-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +systemsettings-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of systemsettings.
 
 *systemsettings-4.0.4 (15 May 2008)
 
