--- a/app-cdr/gnomebaker/ChangeLog
+++ b/app-cdr/gnomebaker/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-cdr/gnomebaker
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/gnomebaker/ChangeLog,v 1.45 2008/06/05 18:34:55 drac Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/gnomebaker/ChangeLog,v 1.46 2008/06/06 06:01:01 corsair Exp $
+
+  06 Jun 2008; Markus Rothe <corsair@gentoo.org> gnomebaker-0.6.2.ebuild:
+  Stable on ppc64; bug #209877
 
   05 Jun 2008; Samuli Suominen <drac@gentoo.org> gnomebaker-0.6.2.ebuild:
   Fix test suite wrt #209877, Comment #2. Thanks to Markus Meier.
