--- a/x11-themes/qtcurve/ChangeLog
+++ b/x11-themes/qtcurve/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/qtcurve
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/qtcurve/Attic/ChangeLog,v 1.29 2008/05/14 20:10:09 yngwin Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/qtcurve/Attic/ChangeLog,v 1.30 2008/06/06 17:04:31 bluebird Exp $
+
+  06 Jun 2008; Friedrich Oslage <bluebird@gentoo.org> qtcurve-0.59.2.ebuild:
+  add ~sparc keyword, bug 218436
 
 *qtcurve-0.59.2 (14 May 2008)
 
