--- a/x11-proto/xproto/ChangeLog
+++ b/x11-proto/xproto/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for x11-proto/xproto
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xproto/ChangeLog,v 1.57 2008/03/10 01:48:03 dberkholz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xproto/ChangeLog,v 1.58 2008/06/06 21:24:26 dberkholz Exp $
+
+*xproto-7.0.13 (06 Jun 2008)
+
+  06 Jun 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +xproto-7.0.13.ebuild:
+  Bump to latest, added support for multi-pointer X. It won't actually be in
+  xorg-server till 1.6 or so, but it's available in the git ebuilds.
 
 *xproto-7.0.12 (10 Mar 2008)
 
