--- a/dev-perl/DBD-SQLite/ChangeLog
+++ b/dev-perl/DBD-SQLite/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/DBD-SQLite
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/DBD-SQLite/ChangeLog,v 1.65 2008/06/07 08:28:17 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/DBD-SQLite/ChangeLog,v 1.66 2008/06/07 09:50:44 aballier Exp $
+
+  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> DBD-SQLite-1.14.ebuild:
+  keyword ~sparc-fbsd
 
   07 Jun 2008; Alexis Ballier <aballier@gentoo.org> DBD-SQLite-1.14.ebuild:
   keyword ~x86-fbsd
