--- a/dev-perl/PlRPC/ChangeLog
+++ b/dev-perl/PlRPC/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/PlRPC
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/PlRPC/ChangeLog,v 1.44 2008/03/28 09:16:56 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/PlRPC/ChangeLog,v 1.45 2008/06/07 09:48:58 aballier Exp $
+
+  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> PlRPC-0.2020-r1.ebuild:
+  keyword ~sparc-fbsd
 
   28 Mar 2008; Jeroen Roovers <jer@gentoo.org> PlRPC-0.2020-r1.ebuild:
   Stable for HPPA too.
