--- a/dev-perl/DBI/ChangeLog
+++ b/dev-perl/DBI/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/DBI
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/DBI/ChangeLog,v 1.110 2008/03/19 01:40:35 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/DBI/ChangeLog,v 1.111 2008/06/07 10:01:00 aballier Exp $
+
+  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> DBI-1.601.ebuild:
+  keyword ~x86-fbsd
 
   19 Mar 2008; Jeroen Roovers <jer@gentoo.org> DBI-1.601.ebuild:
   Stable for HPPA too.
