--- a/kde-base/kdf/ChangeLog
+++ b/kde-base/kdf/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdf
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdf/ChangeLog,v 1.89 2008/06/05 21:40:53 keytoaster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdf/ChangeLog,v 1.90 2008/06/07 10:07:24 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -kdf-3.5.8.ebuild,
+  -kdf-4.0.2.ebuild, -kdf-4.0.3.ebuild:
+  Removed old versions.
 
 *kdf-4.0.5 (05 Jun 2008)
 
