--- a/sci-mathematics/singular/ChangeLog
+++ b/sci-mathematics/singular/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-mathematics/singular
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-mathematics/cvs-repo/gentoo-x86/sci-mathematics/singular/ChangeLog,v 1.21 2008/05/17 09:42:07 markusle Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-mathematics/cvs-repo/gentoo-x86/sci-mathematics/singular/ChangeLog,v 1.22 2008/06/07 12:48:00 markusle Exp $
+
+  07 Jun 2008; Markus Dittrich <markusle@gentoo.org>
+  files/singular-3.0.4.2-gentoo.diff:
+  Fixed bad emacs and info files paths (see bug #225119).
 
   17 May 2008; Markus Dittrich <markusle@gentoo.org>
   singular-3.0.4.2.ebuild:
