--- a/gnome-base/gnome-control-center/ChangeLog
+++ b/gnome-base/gnome-control-center/ChangeLog
@@ -1,6 +1,6 @@
-# ChangeLog for gnome-base/control-center
+# ChangeLog for gnome-base/gnome-control-center
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-control-center/ChangeLog,v 1.1 2008/06/05 11:21:09 remi Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-control-center/ChangeLog,v 1.2 2008/06/07 14:28:37 swegener Exp $
 
 *gnome-control-center-2.22.2.1 (05 Jun 2008)
 *gnome-control-center-2.22.1 (05 Jun 2008)
