--- a/media-gfx/xv/ChangeLog
+++ b/media-gfx/xv/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/xv
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/xv/ChangeLog,v 1.93 2008/06/07 15:35:28 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/xv/ChangeLog,v 1.94 2008/06/07 15:53:00 jer Exp $
+
+  07 Jun 2008; Jeroen Roovers <jer@gentoo.org> xv-3.10a-r15.ebuild:
+  Stable for HPPA (bug #225085).
 
   07 Jun 2008; nixnut <nixnut@gentoo.org> xv-3.10a-r15.ebuild:
   Stable on ppc wrt bug 225085
