--- a/kde-base/kuiviewer/ChangeLog
+++ b/kde-base/kuiviewer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kuiviewer
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kuiviewer/ChangeLog,v 1.77 2008/06/07 16:17:37 keytoaster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kuiviewer/ChangeLog,v 1.78 2008/06/07 17:06:23 jer Exp $
+
+  07 Jun 2008; Jeroen Roovers <jer@gentoo.org> kuiviewer-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
   -kuiviewer-3.5.8.ebuild, -kuiviewer-4.0.2.ebuild, -kuiviewer-4.0.3.ebuild:
