--- a/kde-base/kbabel/ChangeLog
+++ b/kde-base/kbabel/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kbabel
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kbabel/Attic/ChangeLog,v 1.75 2008/06/07 14:49:14 keytoaster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kbabel/Attic/ChangeLog,v 1.76 2008/06/07 19:15:26 jer Exp $
+
+  07 Jun 2008; Jeroen Roovers <jer@gentoo.org> kbabel-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -kbabel-3.5.8.ebuild:
   Removed old versions.
