--- a/app-cdr/serpentine/ChangeLog
+++ b/app-cdr/serpentine/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-cdr/serpentine
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/serpentine/Attic/ChangeLog,v 1.17 2008/06/08 08:31:42 drac Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/serpentine/Attic/ChangeLog,v 1.18 2008/06/08 08:36:55 drac Exp $
+
+  08 Jun 2008; Samuli Suominen <drac@gentoo.org> serpentine-0.9-r1.ebuild:
+  Remove USE debug by passing GCONF_DEBUG=no into gnome2.eclass and fix
+  DESCRIPTION.toolong by removing word serpentine.
 
 *serpentine-0.9-r1 (08 Jun 2008)
 
