--- a/kde-base/kdesdk-meta/ChangeLog
+++ b/kde-base/kdesdk-meta/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdesdk-meta
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdesdk-meta/ChangeLog,v 1.88 2008/06/08 06:11:58 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdesdk-meta/ChangeLog,v 1.89 2008/06/08 15:15:49 armin76 Exp $
+
+  08 Jun 2008; Raúl Porcel <armin76@gentoo.org> kdesdk-meta-3.5.9.ebuild:
+  alpha/sparc stable wrt #221063
 
   08 Jun 2008; Jeroen Roovers <jer@gentoo.org> kdesdk-meta-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
