--- a/games-strategy/wesnoth/ChangeLog
+++ b/games-strategy/wesnoth/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for games-strategy/wesnoth
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.125 2008/06/02 07:30:24 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.126 2008/06/08 19:06:46 mr_bones_ Exp $
+
+*wesnoth-1.4.3 (08 Jun 2008)
+
+  08 Jun 2008; Michael Sterrett <mr_bones_@gentoo.org>
+  +wesnoth-1.4.3.ebuild:
+  version bump
 
   02 Jun 2008; Markus Rothe <corsair@gentoo.org> wesnoth-1.4.2.ebuild:
   Stable on ppc; bug #220957
