--- a/gnome-base/gnome-vfs/ChangeLog
+++ b/gnome-base/gnome-vfs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome-vfs
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-vfs/ChangeLog,v 1.285 2008/04/05 16:50:38 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-vfs/ChangeLog,v 1.286 2008/06/08 20:58:21 eva Exp $
+
+  08 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  -gnome-vfs-2.18.1.ebuild:
+  clean up old revisions.
 
   05 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
   gnome-vfs-2.22.0.ebuild:
