--- a/media-fonts/pothana2k/ChangeLog
+++ b/media-fonts/pothana2k/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/pothana2k
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/pothana2k/ChangeLog,v 1.3 2008/06/05 17:56:04 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/pothana2k/ChangeLog,v 1.4 2008/06/08 21:39:18 ken69267 Exp $
+
+  08 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> pothana2k-2006-r1.ebuild:
+  added ~amd64, bug #224979
 
   05 Jun 2008; Markus Rothe <corsair@gentoo.org> pothana2k-2006-r1.ebuild:
   Added ~ppc64; bug #224979
