--- a/sys-auth/pambase/ChangeLog
+++ b/sys-auth/pambase/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-auth/pambase
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-auth/cvs-repo/gentoo-x86/sys-auth/pambase/ChangeLog,v 1.29 2008/06/04 09:18:59 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-auth/cvs-repo/gentoo-x86/sys-auth/pambase/ChangeLog,v 1.30 2008/06/08 22:31:50 the_paya Exp $
+
+  08 Jun 2008; Javier Villavicencio <the_paya@gentoo.org>
+  pambase-20080318.ebuild:
+  Keyworded ~x86-fbsd.
 
   04 Jun 2008; Markus Rothe <corsair@gentoo.org> pambase-20080318.ebuild:
   Added ~ppc64; bug #224555
