--- a/app-office/abiword/ChangeLog
+++ b/app-office/abiword/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/abiword
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/abiword/ChangeLog,v 1.190 2008/05/04 19:19:13 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/abiword/ChangeLog,v 1.191 2008/06/09 19:58:36 opfer Exp $
+
+  09 Jun 2008; Christian Faulhammer <opfer@gentoo.org> abiword-2.6.3.ebuild:
+  stable x86, bug 225395
 
 *abiword-2.6.3 (04 May 2008)
 
