--- a/sys-freebsd/freebsd-pam-modules/ChangeLog
+++ b/sys-freebsd/freebsd-pam-modules/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-freebsd/freebsd-pam-modules
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-freebsd/cvs-repo/gentoo-x86/sys-freebsd/freebsd-pam-modules/ChangeLog,v 1.20 2008/02/19 12:03:49 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-freebsd/cvs-repo/gentoo-x86/sys-freebsd/freebsd-pam-modules/ChangeLog,v 1.21 2008/06/09 21:13:21 the_paya Exp $
+
+  09 Jun 2008; Javier Villavicencio <the_paya@gentoo.org>
+  freebsd-pam-modules-6.2-r1.ebuild:
+  Keyworded again.
 
 *freebsd-pam-modules-6.2-r1 (19 Feb 2008)
 
