--- a/media-sound/amarok-utils/ChangeLog
+++ b/media-sound/amarok-utils/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/amarok-utils
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/amarok-utils/Attic/ChangeLog,v 1.4 2009/06/26 11:05:41 tampakrap Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/amarok-utils/Attic/ChangeLog,v 1.5 2009/10/02 01:12:50 jmbsvicetto Exp $
+
+*amarok-utils-2.2.0 (02 Oct 2009)
+
+  02 Oct 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
+  +amarok-utils-2.2.0.ebuild:
+  Bumped amarok-utils to version 2.2.0.
 
 *amarok-utils-2.1.1 (26 Jun 2009)
 
