--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for profiles/prefix
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/prefix/ChangeLog,v 1.97 2009/09/30 11:11:03 mduft Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/prefix/ChangeLog,v 1.98 2009/10/02 13:50:51 haubi Exp $
+
+  02 Oct 2009; Michael Haubenwallner <haubi@gentoo.org>
+  sunos/solaris/package.use.mask:
+  ohw, solaris-provided libuuid is insufficient for x11-libs/libSM (#230981)
 
   30 Sep 2009; Michael Haubenwallner <haubi@gentoo.org>
   +sunos/solaris/package.use.mask:
