--- a/x11-base/xorg-drivers/ChangeLog
+++ b/x11-base/xorg-drivers/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-base/xorg-drivers
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/xorg-drivers/ChangeLog,v 1.2 2009/09/30 20:30:51 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/xorg-drivers/ChangeLog,v 1.3 2009/10/02 15:10:30 scarabeus Exp $
+
+*xorg-drivers-1.7 (02 Oct 2009)
+
+  02 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
+  +xorg-drivers-1.7.ebuild:
+  Bump packages for xorg-server-1.7.
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
   xorg-drivers-1.6.ebuild:
