--- a/sys-apps/iproute2/ChangeLog
+++ b/sys-apps/iproute2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/iproute2
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/iproute2/ChangeLog,v 1.133 2009/09/13 14:47:52 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/iproute2/ChangeLog,v 1.134 2009/10/02 17:46:27 armin76 Exp $
+
+  02 Oct 2009; Raúl Porcel <armin76@gentoo.org> iproute2-2.6.28.ebuild:
+  ia64/m68k/s390/sh stable wrt #269184 and re-add ~sparc
 
   13 Sep 2009; Markus Meier <maekke@gentoo.org> iproute2-2.6.28.ebuild:
   arm stable, bug #269184
