--- a/x11-misc/qterm/ChangeLog
+++ b/x11-misc/qterm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/qterm
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/qterm/ChangeLog,v 1.34 2009/09/22 19:06:39 patrick Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/qterm/ChangeLog,v 1.35 2009/10/02 22:19:24 matsuu Exp $
+
+*qterm-0.5.7-r1 (02 Oct 2009)
+
+  02 Oct 2009; MATSUU Takuto <matsuu@gentoo.org> +qterm-0.5.7-r1.ebuild,
+  +files/qterm-0.5.7-gentoo.patch:
+  Fixed desktop file, bug #287212.
 
 *qterm-0.5.7 (22 Sep 2009)
 
