--- a/media-libs/libdvbpsi/ChangeLog
+++ b/media-libs/libdvbpsi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libdvbpsi
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libdvbpsi/ChangeLog,v 1.37 2009/09/29 17:20:44 klausman Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libdvbpsi/ChangeLog,v 1.38 2009/10/02 22:36:52 volkmar Exp $
+
+  02 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> libdvbpsi-0.1.6.ebuild:
+  Stable for ppc, bug 285370
 
   29 Sep 2009; Tobias Klausmann <klausman@gentoo.org>
   libdvbpsi-0.1.6.ebuild:
