--- a/x11-drivers/xf86-video-nv/ChangeLog
+++ b/x11-drivers/xf86-video-nv/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/xf86-video-nv
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-nv/ChangeLog,v 1.80 2009/09/30 20:20:58 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-nv/ChangeLog,v 1.81 2009/10/03 11:47:29 scarabeus Exp $
+
+*xf86-video-nv-2.1.15 (03 Oct 2009)
+
+  03 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
+  +xf86-video-nv-2.1.15.ebuild:
+  Version bump.
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
   xf86-video-nv-2.1.14.ebuild:
