--- a/x11-terms/xterm/ChangeLog
+++ b/x11-terms/xterm/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for x11-terms/xterm
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.273 2009/10/03 11:55:10 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.274 2009/10/03 11:59:05 ssuominen Exp $
 
 *xterm-249 (03 Oct 2009)
 
@@ -67,7 +67,8 @@
   ppc stable, bug #253155
 
   22 Jan 2009; Petteri Räty <betelgeuse@gentoo.org> xterm-239.ebuild:
-  Add back ROOT until xterm build system is fixed to behave properly.
+  Add back ROOT until xterm build system is fixed to behave properly,
+  bug 286299.
 
   21 Jan 2009; Markus Meier <maekke@gentoo.org> xterm-239.ebuild:
   amd64 stable, bug #253155
