--- a/app-editors/nano/ChangeLog
+++ b/app-editors/nano/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-editors/nano
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/nano/ChangeLog,v 1.235 2009/08/31 00:59:06 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/nano/ChangeLog,v 1.236 2009/10/03 12:54:41 mrpouet Exp $
+
+  03 Oct 2009; Romain Perier <mrpouet@gentoo.org>
+  nano-2.1.10.ebuild:
+  Stable for amd64 per bug #287407.
 
   31 Aug 2009; Brent Baude <ranger@gentoo.org> nano-2.1.9.ebuild:
   Marking nano-2.1.9 ppc64 for bug 281269
