--- a/dev-python/ldaptor/ChangeLog
+++ b/dev-python/ldaptor/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/ldaptor
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/ldaptor/ChangeLog,v 1.30 2009/10/02 02:16:49 arfrever Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/ldaptor/ChangeLog,v 1.31 2009/10/03 14:36:19 klausman Exp $
+
+  03 Oct 2009; Tobias Klausmann <klausman@gentoo.org> ldaptor-0.0.43.ebuild:
+  Stable on alpha, bug #284767
 
   02 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   ldaptor-0.0.43.ebuild:
