--- a/x11-libs/libX11/ChangeLog
+++ b/x11-libs/libX11/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/libX11
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.116 2009/09/30 20:06:34 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.117 2009/10/03 15:08:02 scarabeus Exp $
+
+*libX11-1.3 (03 Oct 2009)
+
+  03 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org> +libX11-1.3.ebuild:
+  Version bump for xorg-server 1.7.
 
   30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org> libX11-1.2.2.ebuild:
   amd64 stable wrt #282290
