--- a/x11-libs/libXext/ChangeLog
+++ b/x11-libs/libXext/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXext
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXext/ChangeLog,v 1.59 2009/10/03 15:15:52 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXext/ChangeLog,v 1.60 2009/10/03 15:18:55 scarabeus Exp $
+
+  03 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org> libXext-1.1.ebuild:
+  Fix header.
 
 *libXext-1.1 (03 Oct 2009)
 
