--- a/net-mail/dovecot/ChangeLog
+++ b/net-mail/dovecot/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/dovecot
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.210 2009/09/29 13:17:06 patrick Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.211 2009/10/03 15:58:09 patrick Exp $
+
+  03 Oct 2009; Patrick Lauer <patrick@gentoo.org> dovecot-1.2.4.ebuild:
+  Don't enable mbox by default
 
   29 Sep 2009; Patrick Lauer <patrick@gentoo.org> dovecot-1.2.4.ebuild:
   Default-enable maildir and other useflags. Fixes #286922
